made embed smaller

--- a/other/desktop-only.html
+++ b/other/desktop-only.html
@@ -10,17 +10,17 @@
     <meta property="og:description" content="This page can only be viewed on a desktop device." />
     <meta property="og:url" content="/desktop-only.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/img/DuccPFP.png" />
+    <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fancy Ducc Portfolio - Desktop Only" />
     <meta name="twitter:description" content="Please view this page on a desktop device." />
-    <meta name="twitter:image" content="/assets/img/DuccPFP.png" />
+    <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="robots" content="noindex,nofollow" />
     <meta name="theme-color" content="#5000e6" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Fancy Ducc Portfolio - Desktop Only</title>
-    <link rel="icon" href="/assets/img/DuccPFP.png" />
+    <link rel="icon" href="/assets/img/DuccPFPSmall.png" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <link href="/css/styles.css" rel="stylesheet">
