--- a/other/temporarynavigation.html
+++ b/other/temporarynavigation.html
@@ -10,20 +10,20 @@
     <meta property="og:description" content="This isn't used anymore right now!" />
     <meta property="og:url" content="/temporarynavigation.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/img/DuccPFP.png" />
+    <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fancy Ducc Portfolio - Temporary Navigation" />
     <meta name="twitter:description"
         content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
-    <meta name="twitter:image" content="/assets/img/DuccPFP.png" />
+    <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="theme-color" content="#5000e6" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Fancy Ducc" />
     <title>Fancy Ducc Portfolio - Temporary Navigation</title>
-    <link rel="icon" href="/assets/img/DuccPFP.png" />
+    <link rel="icon" href="/assets/img/DuccPFPSmall.png" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <link href="/css/styles.css" rel="stylesheet">
