--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -176,6 +176,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                     <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/cool_inspect.mp4" alt="Desert Eagle Inspect"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Desert Eagle Inspect</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
                         <video class="img-fluid" src="/assets/img/video/heli_leave.mp4" alt="Helicopter Leave"
                             controls></video>
                         <div class="portfolio-caption">
