--- a/about/schedule.html
+++ b/about/schedule.html
@@ -61,6 +61,10 @@
     <div class="divider"></div>
 
     <section class="content-page-section">
+        <div class="col-lg-12">
+                <p><span class="MyTime" id="MyTime">The time for me right now is: </span></p>
+            </div>
+
         <div id="calendar"></div>
     </section>
 
