Fix OG URL paths

--- a/about/testimonials.html
+++ b/about/testimonials.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Testimonials" />
     <meta property="og:description"
         content="Hey look, an embed! This is testimonials that I've gotten for my work with other people." />
-    <meta property="og:url" content="/testimonials.html" />
+    <meta property="og:url" content="/about/testimonials.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
