--- a/about/why-hire-me.html
+++ b/about/why-hire-me.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Why Hire Me" />
     <meta property="og:description"
         content="Hey look, an embed! This is the why hire me page where you can read about what I do differently and why you should hire me." />
-    <meta property="og:url" content="/why-hire-me.html" />
+    <meta property="og:url" content="/about/why-hire-me.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
