--- a/other/dualityidea.html
+++ b/other/dualityidea.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Duality Idea" />
     <meta property="og:description"
         content="Hey look, an embed! This page is here to show my idea for a Forsaken killer, cmon Forsaken devs, read this." />
-    <meta property="og:url" content="/dualityidea.html" />
+    <meta property="og:url" content="/other/dualityidea.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
