--- a/other/temporarynavigation.html
+++ b/other/temporarynavigation.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Fancy Ducc Portfolio - Temporary Navigation" />
     <meta property="og:description" content="This isn't used anymore right now!" />
-    <meta property="og:url" content="/temporarynavigation.html" />
+    <meta property="og:url" content="/other/temporarynavigation.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
