--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Animations" />
     <meta property="og:description"
         content="Hey look, an embed! This is the animation page of my portfolio where you can see animations I've made before." />
-    <meta property="og:url" content="/animating.html" />
+    <meta property="og:url" content="/portfolio/animation.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
