--- a/portfolio/modeling.html
+++ b/portfolio/modeling.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - 3D Models" />
     <meta property="og:description"
         content="Hey look, an embed! This is the modeling page of my portfolio where you can see 3D models I've made before." />
-    <meta property="og:url" content="/modeling.html" />
+    <meta property="og:url" content="/portfolio/modeling.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
