--- a/portfolio/music.html
+++ b/portfolio/music.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Music" />
     <meta property="og:description"
         content="Hey look, an embed! This is the music page of my portfolio where you can listen to music I've made before." />
-    <meta property="og:url" content="/music.html" />
+    <meta property="og:url" content="/portfolio/music.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
