--- a/portfolio/scripting.html
+++ b/portfolio/scripting.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Scripting & Coding" />
     <meta property="og:description"
         content="Hey look, an embed! This is the scripting page of my portfolio where you can see scripts I've made before." />
-    <meta property="og:url" content="/scripting.html" />
+    <meta property="og:url" content="/portfolio/scripting.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
