--- a/portfolio/vfx.html
+++ b/portfolio/vfx.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - VFX" />
     <meta property="og:description"
         content="Hey look, an embed! This is the VFX page of my portfolio where you can see VFX I've made before." />
-    <meta property="og:url" content="/vfx.html" />
+    <meta property="og:url" content="/portfolio/vfx.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
