--- a/services/free-stuff.html
+++ b/services/free-stuff.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Free Stuff" />
     <meta property="og:description"
         content="Hey look, an embed! This is the free stuff page of my portfolio where you can download free things I've made." />
-    <meta property="og:url" content="/free-stuff.html" />
+    <meta property="og:url" content="/services/free-stuff.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
