--- a/about/schedule.html
+++ b/about/schedule.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - My Schedule" />
     <meta property="og:description"
         content="Hey look, an embed! This is my schedule where you can see when I'm busy and when I'm not/" />
-    <meta property="og:url" content="/schedule.html" />
+    <meta property="og:url" content="/about/schedule.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
