--- a/other/404.html
+++ b/other/404.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - 404" />
     <meta property="og:description"
         content="This embed ain't leading to somewhere that exists! Maybe try https://www.fancyduccportfolio.com/" />
-    <meta property="og:url" content="/schedule.html" />
+    <meta property="og:url" content="/other/404.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
