--- a/other/desktop-only.html
+++ b/other/desktop-only.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Fancy Ducc Portfolio - Desktop Only" />
     <meta property="og:description" content="This page can only be viewed on a desktop device." />
-    <meta property="og:url" content="/desktop-only.html" />
+    <meta property="og:url" content="/other/desktop-only.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
