--- a/portfolio/building.html
+++ b/portfolio/building.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Builds" />
     <meta property="og:description"
         content="Hey look, an embed! This is the building page of my portfolio where you can see builds I've made before." />
-    <meta property="og:url" content="/building.html" />
+    <meta property="og:url" content="/portfolio/building.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
