--- a/services/games.html
+++ b/services/games.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Games & My Work" />
     <meta property="og:description"
         content="Hey look, an embed! This is the games and work page of my portfolio where you can see what games I've worked for before." />
-    <meta property="og:url" content="/games.html" />
+    <meta property="og:url" content="/services/games.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
