--- a/services/payments.html
+++ b/services/payments.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Fancy Ducc Portfolio - Payments & Pricing" />
     <meta property="og:description"
         content="Hey look, an embed! This is the pricing page of my portfolio where you can see how much my work costs before hiring me." />
-    <meta property="og:url" content="/payments.html" />
+    <meta property="og:url" content="/services/payments.html" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="author" content="Fancy Ducc" />
