--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -130,6 +130,74 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                     <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/cutscene_testing.mp4" alt="Bored Cutscene"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Bored Cutscene Testing</div>
+                            <div class="portfolio-extra-description">
+                                <p>Unfinished sound design, probably won't ever be finished anyway.</p>
+                            </div>
+                            <button class="toggle-description" style="display: none;">Show Description <span
+                                    class="arrow">&#x25BC;</span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/cool_run.mp4" alt="Cool Run"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Cool Run</div>
+                            <div class="portfolio-extra-description">
+                                <p>It's just a cool run.</p>
+                            </div>
+                            <button class="toggle-description" style="display: none;">Show Description <span
+                                    class="arrow">&#x25BC;</span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/true_lab_reveal.mp4" alt="True Lab Reveal Cutscene"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">True Lab Reveal Cutscene</div>
+                            <div class="portfolio-extra-description">
+                                <p>This is a cutscene made for the popular DOORS Fangame; Paradox as well as the main attraction for Sneak Peek #6</p>
+                                <p>You can see Sneak Peek #6 <a href="https://www.youtube.com/watch?v=N_AQMKVk8d8"
+                                        class="hover-link">Here</a>.</p>
+                            </div>
+                            <button class="toggle-description" style="display: none;">Show Description <span
+                                    class="arrow">&#x25BC;</span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/teaser_ending_cutscene.mp4" alt="Teaser Trailer Ending Cutscene"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Teaser Trailer Ending Cutscene</div>
+                            <div class="portfolio-extra-description">
+                                <p>This is a cutscene made for the popular DOORS Fangame; Paradox as well as the ending scene for the Teaser Trailer</p>
+                                <p>You can see the Teaser Trailer <a href="https://www.youtube.com/watch?v=rWJOufLrbOo"
+                                        class="hover-link">Here</a>.</p>
+                            </div>
+                            <button class="toggle-description" style="display: none;">Show Description <span
+                                    class="arrow">&#x25BC;</span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/gun_anims.mp4" alt="Tool-based Gun Animations" controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Tool-based Gun Animations</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
                         <video class="img-fluid" src="/assets/img/video/closet_doors.mp4" alt="Closet" controls></video>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Closet Hiding Animations</div>
