--- a/portfolio/modeling.html
+++ b/portfolio/modeling.html
@@ -95,6 +95,33 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                     <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/castle_tower.mp4" alt="Castle Tower"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Castle Tower</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/monster_arm.mp4" alt="Monster Arm"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Monster Arm</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/vent_hole.mp4" alt="Vent Hole"
+                            controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Vent Hole</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
                         <img class="img-fluid portfolio-image" src="/assets/img/3D modeling/Front Door Image.png"
                             alt="Door 3D Model" loading="lazy" />
                         <div class="portfolio-caption">
