--- a/portfolio/scripting.html
+++ b/portfolio/scripting.html
@@ -132,6 +132,40 @@
                             controls></video>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Ladder System</div>
+                            <div class="portfolio-extra-description">
+                                <p>I don't like this system anymore...</p>
+                            </div>
+                            <button class="toggle-description" style="display: none;">Show Description <span
+                                    class="arrow">&#x25BC;</span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/gun_system.mp4"
+                            alt="Tool-based Gun system" controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Tool-based Gun system</div>
+                            <div class="portfolio-extra-description">
+                                <p>This was done by me and a friend, where we made an entire tool-based gun system and only in a tool in about 6-7 hours, all animations, visual effects, sound effects, and about half of the scripting was done by me.</p>
+                            </div>
+                            <button class="toggle-description" style="display: none;">Show Description <span
+                                    class="arrow">&#x25BC;</span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="portfolio-item">
+                        <video class="img-fluid" src="/assets/img/video/truck_system.mp4"
+                            alt="Truck Driving System" controls></video>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Truck Driving System</div>
+                            <div class="portfolio-extra-description">
+                                <p>This entire truck driving system was done by me completely solo.</p>
+                                <p>It took me nearly 3 days and 10 sources just to get the suspension to look realistic and good...</p>
+                            </div>
+                            <button class="toggle-description" style="display: none;">Show Description <span
+                                    class="arrow">&#x25BC;</span></button>
                         </div>
                     </div>
                 </div>
