Implement smart loader and skill strip UI
Replaces legacy preloader markup with a new smart loader using loader.js and loader.css across all pages. Adds a draggable, animated skill strip to the homepage with supporting styles and skills-scroll.js.

--- a/other/404.html
+++ b/other/404.html
@@ -29,16 +29,14 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/calender.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+    <link href="/css/loader.css" rel="stylesheet">
+    <script src="/js/loader.js"></script>
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
     <script src="/js/schedule.js"></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-  <div class="preloader">
-    <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-    <div class="preloader-text">loading…</div>
-  </div>
     <div id="navbar-overlay"></div>
 
     <header class="masthead">
