--- a/services/free-stuff.html
+++ b/services/free-stuff.html
@@ -27,6 +27,8 @@
     <link rel="icon" href="/assets/img/DuccPFPSmall.png" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <link href="/css/loader.css" rel="stylesheet">
+    <script src="/js/loader.js"></script>
     <link href="/css/styles.css" rel="stylesheet">
     <script src="/js/freestuff.js"></script>
     <script src="/js/warningbanner.js"></script>
@@ -34,18 +36,12 @@
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-  <div class="preloader">
-    <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-    <div class="preloader-text">loading…</div>
-  </div>
     <div id="navbar-overlay"></div>
     <header class="masthead">
 
         <div class="masthead-content">
             <div class="container">
                 <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Free Stuff</span></div>
-                <div class="masthead-subheading"><span style="color: #f0f0f0;">Go wild with this stuff, cause it's
-                        FREE</span></div>
             </div>
         </div>
     </header>
