--- a/about/schedule.html
+++ b/about/schedule.html
@@ -30,6 +30,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/calender.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+    <link href="/css/loader.css" rel="stylesheet">
+    <script src="/js/loader.js"></script>
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
     <script src="/js/schedule.js"></script>
@@ -41,10 +43,6 @@
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-  <div class="preloader">
-    <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-    <div class="preloader-text">loading…</div>
-  </div>
     <div id="navbar-overlay"></div>
 
     <header class="masthead">
@@ -52,8 +50,6 @@
         <div class="masthead-content">
             <div class="container">
                 <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">My Schedule</span></div>
-                <div class="masthead-subheading"><span style="color: rgb(255, 255, 255);">Check out my
-                        availability</span></div>
             </div>
         </div>
     </header>
