--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
   <link href="/css/styles.css" rel="stylesheet" type="text/css">
+  <link href="/css/loader.css" rel="stylesheet">
+  <script src="/js/loader.js"></script>
   <script src="/js/warningbanner.js"></script>
   <script src="/js/includes.js"></script>
+  <script src="/js/skills-scroll.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-  <div class="preloader">
-    <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-    <div class="preloader-text">loading…</div>
-  </div>
 
   <div id="navbar-overlay"></div>
 
@@ -43,11 +42,25 @@
     <div class="masthead-content">
       <div class="container text-center">
         <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Hi, I'm Fancy Ducc</span></div>
-        <div class="masthead-subheading"><span style="color: rgb(255, 255, 255);">Building, Animation, Scripting, Music,
-            and so much more.</span></div>
       </div>
     </div>
   </header>
+
+  <div class="divider"></div>
+
+  <section id="skill-strip">
+    <div class="skill-track">
+      <div class="slice">
+        <span class="skill">BUILDING</span>
+        <span class="skill">ANIMATING</span>
+        <span class="skill">SCRIPTING</span>
+        <span class="skill">3D DESIGN</span>
+        <span class="skill">SOUND DESIGN</span>
+        <span class="skill">VFX</span>
+        <span class="skill">MUSIC</span>
+      </div>
+    </div>
+  </section>
 
   <div class="divider"></div>
 
@@ -83,9 +96,9 @@
       </div>
       <div class="col-lg-8 mb-4 d-flex justify-content-center">
         <div class="portfolio-item text-center">
-          <video class="img-fluid" src="/assets/img/video/why_did_I_make_this.mp4" alt="Goofy Dance" controls></video>
+          <video class="img-fluid" src="/assets/img/video/dirty_combo.mp4" alt="Fight Combo" controls></video>
           <div class="portfolio-caption">
-            <div class="portfolio-caption-heading">a very goofy dance</div>
+            <div class="portfolio-caption-heading">Cool Fight Combo</div>
           </div>
         </div>
       </div>
