--- a/portfolio/music.html
+++ b/portfolio/music.html
@@ -27,16 +27,19 @@
     <link rel="icon" href="/assets/img/DuccPFPSmall.png" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <link href="/css/loader.css" rel="stylesheet">
+    <script src="/js/loader.js"></script>
     <link href="/css/styles.css" rel="stylesheet">
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
+        <script>
+        if (window.innerWidth < 1024) {
+            window.location.href = "/other/desktop-only.html";
+        }
+    </script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-  <div class="preloader">
-    <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-    <div class="preloader-text">loading…</div>
-  </div>
     <div id="navbar-overlay"></div>
     <header class="masthead">
 
