Add Pac-Man game and update loader integration
Added a new Pac-Man game using Python and PyScript (literallypacman.html, py/pacman.py). Integrated loader.js and loader.css into payments and animation portfolio pages, removing inline preloader markup. Minor meta description update in payments.html. Added Discord verification file.

--- a/services/payments.html
+++ b/services/payments.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fancy Ducc Portfolio - Payments & Pricing" />
     <meta name="twitter:description"
-        content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
+        content="Roblox game dev by Fancy Ducc - see my work, explore my process, and get in touch!" />
     <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
@@ -27,16 +27,14 @@
     <link rel="icon" href="/assets/img/DuccPFPSmall.png" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <link href="/css/loader.css" rel="stylesheet">
+    <script src="/js/loader.js"></script>
     <link href="/css/styles.css" rel="stylesheet">
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-  <div class="preloader">
-    <div class="spinner-border text-light" role="status" aria-hidden="true"></div>
-    <div class="preloader-text">loading…</div>
-  </div>
     <div id="navbar-overlay"></div>
 
     <header class="masthead">
