Add advanced lightbox with magnifier
Replaces the old static lightbox markup with a new JavaScript-powered lightbox (js/lightbox.js) and associated styles (css/lightbox.css). The new lightbox features a gradient frame, blur, magnifier lens, keyboard and swipe navigation, and dynamic image loading. All portfolio and relevant pages now include the new lightbox assets and remove the old hardcoded overlay. Also adds a new free Blender rig link to freestuff.js, and moves literallypacman.html to games/.

--- a/portfolio/building.html
+++ b/portfolio/building.html
@@ -32,6 +32,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
+    <link href="/css/lightbox.css" rel="stylesheet">
+    <script src="/js/lightbox.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -58,18 +60,7 @@
             <p><span style="color: #f0f0f0;">Currently, my most impressive building related project to date is a is
                     Sane, a simplistic yet advanced horror game with many small details and a top-tier camera
                     system.</span></p>
-            <p><span style="color: #f0f0f0;">Everything you see in this section IS Roblox.</span></p>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                    <div class="portfolio-item">
-                        <img class="img-fluid portfolio-image" src="/assets/img/portfolio/destroyed_paradox_room.png"
-                            alt="Destroyed Paradox Room" loading="lazy" />
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Paradox Destroyed Room</div>
-                            <div class="portfolio-caption-subheading text-muted">2024 December</div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                     <div class="portfolio-item">
                         <img class="img-fluid portfolio-image" src="/assets/img/portfolio/sane_bedroom.png"
@@ -340,11 +331,5 @@
     <script src="/js/scripts.js"></script>
 
 </body>
-<div id="lightbox" class="lightbox-overlay">
-    <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
-    <img id="lightbox-img" class="lightbox-img" src="" alt="">
-    <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
-    <img id="lightbox-img" class="lightbox-img" src="" alt="">
-</div>
 
 </html>
