--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -32,6 +32,8 @@
     <script src="/js/loader.js"></script>
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
+    <link href="/css/lightbox.css" rel="stylesheet">
+    <script src="/js/lightbox.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -369,11 +371,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="/js/scripts.js"></script>
 </body>
-<div id="lightbox" class="lightbox-overlay">
-    <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
-    <img id="lightbox-img" class="lightbox-img" src="" alt="">
-    <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
-    <img id="lightbox-img" class="lightbox-img" src="" alt="">
-</div>
 
 </html>
