--- a/portfolio/music.html
+++ b/portfolio/music.html
@@ -32,11 +32,13 @@
     <link href="/css/styles.css" rel="stylesheet">
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
-        <script>
+    <script>
         if (window.innerWidth < 1024) {
             window.location.href = "/other/desktop-only.html";
         }
     </script>
+    <link href="/css/lightbox.css" rel="stylesheet">
+    <script src="/js/lightbox.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -323,11 +325,5 @@
     <script src="/js/audioplayers.js"></script>
 
 </body>
-<div id="lightbox" class="lightbox-overlay">
-    <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
-    <img id="lightbox-img" class="lightbox-img" src="" alt="">
-    <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
-    <img id="lightbox-img" class="lightbox-img" src="" alt="">
-</div>
 
 </html>
