Add animated grid background and update meta tags
Introduces a new animated grid background effect via fx.css and fx.js, applied across all major pages. Updates meta robots tags to 'noindex, nofollow' and adds 'noai' to restrict AI crawling. Minor content edits and accessibility improvements are included. Also adds robots.txt to block major AI bots.

--- a/other/desktop-only.html
+++ b/other/desktop-only.html
@@ -16,7 +16,8 @@
     <meta name="twitter:title" content="Fancy Ducc Portfolio - Desktop Only" />
     <meta name="twitter:description" content="Please view this page on a desktop device." />
     <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
-    <meta name="robots" content="noindex,nofollow" />
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noai">
     <meta name="theme-color" content="#5000e6" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Fancy Ducc Portfolio - Desktop Only</title>
@@ -26,11 +27,19 @@
     <link href="/css/loader.css" rel="stylesheet">
     <script src="/js/loader.js"></script>
     <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/fx.css" rel="stylesheet">
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
+    <script src="/js/fx.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
+    <div id="fx-bg" aria-hidden="true">
+        <div class="fx-base"></div>
+        <div class="fx-glow"></div>
+        <div class="fx-grid"></div>
+    </div>
+
     <div id="navbar-overlay"></div>
 
     <header class="masthead">
