--- a/portfolio/scripting.html
+++ b/portfolio/scripting.html
@@ -16,10 +16,10 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fancy Ducc Portfolio - Scripting & Coding" />
     <meta name="twitter:description"
-        content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
+        content="Roblox game dev by Fancy Ducc - see my work, explore my process, and get in touch!" />
     <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
-    <meta name="robots" content="index,follow" />
-    <meta name="googlebot" content="index,follow" />
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noai">
     <meta name="theme-color" content="#5000e6" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Fancy Ducc" />
@@ -30,13 +30,21 @@
     <link href="/css/loader.css" rel="stylesheet">
     <script src="/js/loader.js"></script>
     <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/fx.css" rel="stylesheet">
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
     <link href="/css/lightbox.css" rel="stylesheet">
     <script src="/js/lightbox.js" defer></script>
+    <script src="/js/fx.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
+    <div id="fx-bg" aria-hidden="true">
+        <div class="fx-base"></div>
+        <div class="fx-glow"></div>
+        <div class="fx-grid"></div>
+    </div>
+
     <div id="navbar-overlay"></div>
     <header class="masthead">
 
@@ -54,18 +62,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p><span style="color: #f0f0f0;">Scripting is where the magic happens in game development. As a
-                            scripter with 7 years of experience in scripting, I know how to make the magic come alive.
+                            scripter with 8 years of experience in scripting, I know how to make the magic come alive.
                             From the simplest tasks to complex systems, I write scripts that promise smooth
                             gameplay.</span></p>
-                    <p><span style="color: #f0f0f0;">Small amounts of coding is collaborated with AI, as I believe AI is
-                            here to stay. However, all originality and coding foundations start manually, and most
-                            scripts and modifications are done manually without AI.</span></p>
-                    <p><span style="color: #f0f0f0;">I recently created a 3D Particle system called <a
-                                href="https://fancyducc.github.io/3D-Particle-System/getting-started/"
-                                class="hover-link">VortexFX</a> that is highly versatile paired with a full GitHub
-                            documentation. Check it out <a
-                                href="https://devforum.roblox.com/t/vortexfx-v1055-a-3d-particle-system-for-all-your-3d-particle-needs/3131414"
-                                class="hover-link">here</a>
+
+                    <p><span style="color: #f0f0f0;">As of <strong>8/27/2025</strong> all code is no longer used with AI and AI is exiled from editing any of my code and I will not use any source of AI for coding.</span></p>
                 </div>
             </div>
             <div class="row">
