--- a/about/schedule.html
+++ b/about/schedule.html
@@ -16,10 +16,10 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fancy Ducc Portfolio - My Schedule" />
     <meta name="twitter:description"
-        content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
+        content="Roblox game dev by Fancy Ducc - see my work, explore my process, and get in touch!" />
     <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
-    <meta name="robots" content="index,follow" />
-    <meta name="googlebot" content="index,follow" />
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noai">
     <meta name="theme-color" content="#5000e6" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Fancy Ducc" />
@@ -28,12 +28,14 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/fx.css" rel="stylesheet">
     <link href="/css/calender.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
     <link href="/css/loader.css" rel="stylesheet">
     <script src="/js/loader.js"></script>
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
+    <script src="/js/fx.js" defer></script>
     <script src="/js/schedule.js"></script>
     <script>
         if (window.innerWidth < 1024) {
@@ -43,6 +45,12 @@
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
+    <div id="fx-bg" aria-hidden="true">
+        <div class="fx-base"></div>
+        <div class="fx-glow"></div>
+        <div class="fx-grid"></div>
+    </div>
+
     <div id="navbar-overlay"></div>
 
     <header class="masthead">
