--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Fancy Ducc Portfolio - Home" />
   <meta name="twitter:description"
-    content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
+    content="Roblox game dev by Fancy Ducc - see my work, explore my process, and get in touch!" />
   <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
-  <meta name="robots" content="index,follow" />
-  <meta name="googlebot" content="index,follow" />
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="noai">
   <meta name="theme-color" content="#5000e6" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Fancy Ducc Portfolio - Home</title>
@@ -28,13 +28,20 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
   <link href="/css/styles.css" rel="stylesheet" type="text/css">
   <link href="/css/loader.css" rel="stylesheet">
+  <link href="/css/fx.css" rel="stylesheet">
   <script src="/js/loader.js"></script>
   <script src="/js/warningbanner.js"></script>
   <script src="/js/includes.js"></script>
   <script src="/js/skills-scroll.js" defer></script>
+  <script src="/js/fx.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
+  <div id="fx-bg" aria-hidden="true">
+    <div class="fx-base"></div>
+    <div class="fx-glow"></div>
+    <div class="fx-grid"></div>
+  </div>
 
   <div id="navbar-overlay"></div>
 
@@ -147,8 +154,8 @@
               <div class="process-description">
                 <p>
                   I evaluate whether the idea is fresh, engaging, and truly something that I can help elevate.
-                  If it’s creative or has something I think I'd like to work on, I’ll move forward. If not, I’m always
-                  transparent about whether I’m the right fit or if it needs more refinement.
+                  If it's creative or has something I think I'd like to work on, I'll move forward. If not, I'm always
+                  transparent about whether I'm the right fit or if it needs more refinement.
                 </p>
                 <p>
                   If I'm not, don't be sad because I have many other connections to people who likely would work on the
