--- a/services/games.html
+++ b/services/games.html
@@ -15,10 +15,10 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fancy Ducc Portfolio - Games & My Work" />
     <meta name="twitter:description"
-        content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
+        content="Roblox game dev by Fancy Ducc - see my work, explore my process, and get in touch!" />
     <meta name="twitter:image" content="/assets/img/DuccPFPSmall.png" />
-    <meta name="robots" content="index,follow" />
-    <meta name="googlebot" content="index,follow" />
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noai">
     <meta name="theme-color" content="#5000e6" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Fancy Ducc" />
@@ -29,11 +29,19 @@
     <link href="/css/loader.css" rel="stylesheet">
     <script src="/js/loader.js"></script>
     <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/fx.css" rel="stylesheet">
     <script src="/js/warningbanner.js"></script>
     <script src="/js/includes.js"></script>
+    <script src="/js/fx.js" defer></script>
 </head>
 
 <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
+    <div id="fx-bg" aria-hidden="true">
+        <div class="fx-base"></div>
+        <div class="fx-glow"></div>
+        <div class="fx-grid"></div>
+    </div>
+
     <div id="navbar-overlay"></div>
     <header class="masthead">
 
