Remove music portfolio and related references
Deleted portfolio/music.html and removed all references to music portfolio and music design services from navigation, index, payments, and modeling pages. Updated image references to use DuccPFPSmall.png instead of DuccPFP.png. Adjusted CSS and JS for layout and effects.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         <span class="skill">3D DESIGN</span>
         <span class="skill">SOUND DESIGN</span>
         <span class="skill">VFX</span>
-        <span class="skill">MUSIC</span>
       </div>
     </div>
   </section>
@@ -73,7 +72,7 @@
 
   <section class="page-section">
     <div class="text-center">
-      <img src="/assets/img/DuccPFP.png" alt="Fancy Ducc Profile" style="max-width: 200px; border-radius: 50%;"
+      <img src="/assets/img/DuccPFPSmall.png" alt="Fancy Ducc Profile" style="max-width: 200px; border-radius: 50%;"
         loading="lazy">
     </div>
     <div class="text-center body-txt">
