--- a/navbar.html
+++ b/navbar.html
@@ -3,7 +3,7 @@
         <div class="row w-100">
             <div class="col text-center">
                 <a class="navbar-brand" href="/">
-                    <img src="/assets/img/DuccPFP.png" alt="Logo" style="height: 30px;" loading="lazy">
+                    <img src="/assets/img/DuccPFPSmall.png" alt="Logo" style="height: 30px;" loading="lazy">
                     <span class="hover-link"><strong>Fancy Ducc Portfolio</strong></span>
                 </a>
             </div>
